--- a/JavaScriptElearning/pom.xml
+++ b/JavaScriptElearning/pom.xml
@@ -76,5 +76,10 @@
   		<artifactId>javax.ws.rs-api</artifactId>
   		<version>2.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.google.code.gson</groupId>
+  		<artifactId>gson</artifactId>
+  		<version>2.7</version>
+  	</dependency>
   </dependencies>
 </project>
