--- a/JavaScriptElearning/pom.xml
+++ b/JavaScriptElearning/pom.xml
@@ -103,5 +103,10 @@
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
 		</dependency>
+		<dependency>
+		    <groupId>nz.ac.waikato.cms.weka</groupId>
+		    <artifactId>weka-stable</artifactId>
+		    <version>3.8.1</version>
+		</dependency>
 	</dependencies>
 </project>
