--- a/JavaScriptElearning/pom.xml
+++ b/JavaScriptElearning/pom.xml
@@ -7,14 +7,15 @@
 	<packaging>war</packaging>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory> 
 		<resources>
-	      <resource>
-	        <directory>resources</directory>
-	        <includes>
-	          <include>**/*.xml</include>
-	        </includes>
-	      </resource>
-	    </resources>
+			<resource>
+				<directory>resources</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -40,17 +41,29 @@
 					<appName>java-script-elearning</appName>
 				</configuration>
 			</plugin>
-			<plugin>  
-			    <groupId>org.apache.tomcat.maven</groupId>  
-				 <artifactId>tomcat7-maven-plugin</artifactId>  
-				 <version>2.2</version>
-			 <configuration>  
-			  <url>http://ec2-35-157-36-251.eu-central-1.compute.amazonaws.com:8080/manager/text</url>  
-			  <server>TomcatServer</server>    
-			  <username>djmichol</username>  
-			  <password>Buba@1122</password>   
-			 </configuration>   
-			</plugin>  
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>http://ec2-35-157-36-251.eu-central-1.compute.amazonaws.com:8080/manager/text</url>
+					<server>TomcatServer</server>
+					<username>djmichol</username>
+					<password>Buba@1122</password>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.19.1</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -110,14 +123,19 @@
 			<version>2.0</version>
 		</dependency>
 		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
 		</dependency>
 		<dependency>
-		    <groupId>nz.ac.waikato.cms.weka</groupId>
-		    <artifactId>weka-stable</artifactId>
-		    <version>3.8.1</version>
+			<groupId>nz.ac.waikato.cms.weka</groupId>
+			<artifactId>weka-stable</artifactId>
+			<version>3.8.1</version>
 		</dependency>
 	</dependencies>
 </project>
